# BodyScanner

./: .cproject  .gitignore  .project  CMakeLists.txt  InstallDependencies.sh  README  README.markdown  index.html
BodyPuppet/: BodyPuppet.cbp  BodyPuppet.workspace  CMakeLists.txt  config.make
BodyPuppet/src/: BodyPuppetApp.cpp  BodyPuppetApp.h  main.cpp
BodyPuppet/src/Shaders/: SkinRiggingShader.frag  SkinRiggingShader.vert
Documentation/: DataFlow.dia
Libraries/pcl-1.2-bodyscanner/.svn/: all-wcprops  dir-prop-base  entries
Libraries/pcl-1.2-bodyscanner/apps/.svn/: all-wcprops  entries
Libraries/pcl-1.2-bodyscanner/cmake/.svn/: all-wcprops  entries
Libraries/pcl-1.2-bodyscanner/common/.svn/: all-wcprops  entries
Libraries/pcl-1.2-bodyscanner/common/src/: io.cpp  parse.cpp
Libraries/pcl-1.2-bodyscanner/common/test/: test_common.cpp
Libraries/pcl-1.2-bodyscanner/doc/.svn/: all-wcprops  entries
Libraries/pcl-1.2-bodyscanner/features/.svn/: all-wcprops  entries
Libraries/pcl-1.2-bodyscanner/filters/.svn/: all-wcprops  entries
Libraries/pcl-1.2-bodyscanner/filters/src/: radius_outlier_removal.cpp  (+1 more)
Libraries/pcl-1.2-bodyscanner/test/: test_feature.cpp  test_registration.cpp  test_surface.cpp
Models/: kaushik_front_sparse_skeleton.yaml  kaushik_skeleton_00087.yaml  sebastien_skeleton.yaml
Modules/Inactive/cc/tests_src/: CCFactorGraph.h  CCMesh.cpp  CCPartialMesh.h  CCPointSet.h  CCTools.cpp  CMakeLists.txt
Modules/Inactive/cc/tests_src/CMakeModules/: FindGMP.cmake
Modules/body-grabber/: CMakeLists.txt
Modules/body-grabber/include/Body/: BodyPointCloud.h  BodySegmentation.h  Builder.h  Skin.h  Surface.h
Modules/body-grabber/include/Body/Skeleton/: Joint.h  Skeleton.h  SkeletonYaml.h
Modules/body-grabber/include/pcl_addons/io/: openni_human_grabber.h
Modules/body-grabber/src/: BodyScanner.cpp
Modules/body-grabber/src/Body/: BodySegmentation.cpp  Builder.cpp  Skin.cpp  Surface.cpp
Modules/body-grabber/src/Body/Skeleton/: Pose.cpp  Skeleton.cpp
Modules/body-grabber/src/pcl_addons/io/: openni_human_grabber.cpp
Modules/export-fbx/: Canonicalize.py  LimbLengthConstancy.py  MakeMesh.cpp  MakeMesh.py  MakeRig.py  MakeSkeleton.py  README  pcd.py  runCanon.py  skeleton.py  vec.py
Modules/geodesic/: CMakeLists.txt
Modules/pcd-viewer/: cloud_viewer.cpp
Modules/pcl-visualizer/: CMakeLists.txt
Modules/segmentation/: CMakeLists.txt  segmentation.cpp  segmentation2.cpp  sharpSegmentation.cpp
Modules/surface-reconstructor/: surface-reconstructor.cpp  vtk2obj.py
Recordings/: check-skinning.py  match-skeleton-and-scan.py  process.py
cc/others/: surface-reconstruction.cpp
cc/tests_src/: CCFactorGraph.cpp  CCMesh.h  CCModelMesh.cpp  CCModelMesh.h  CCPartialMesh.cpp  CCPointSet.cpp  CCTools.h  CMakeLists2.txt  Logger.cpp  Logger.h  main.cpp
data-recorder/: CMakeLists.txt
export-fbx/: CMakeLists.txt  LimbLengthConstancy.py  MakeMesh.py  MakeMovingSkeleton.py  MakeRig.py  MakeSkeletonBasic.py  pcd.py  skeleton.py
geodesic/: geodesic.cpp
pcd-viewer/: cloud_viewer.cpp
pcl-grabber/: BodyScanner.cpp  CMakeLists.txt
pcl-grabber/include/Body/Skeleton/: Pose.h
pcl-grabber/include/BodyScanner/: OpenNIAndNITEGrabber.h
pcl-grabber/include/BodyScanner/io/: openni_human_grabber.h  openni_nite_device.h  openni_nite_grabber.h
pcl-grabber/include/BodyScanner/io/openni_camera/: openni_driver_nite.h
pcl-grabber/include/pcl_addons/common/: synchronizer3.h
pcl-grabber/include/pcl_addons/io/: openni_human_grabber.h
pcl-grabber/src/: BodyScanner.cpp
pcl-grabber/src/Body/Skeleton/: Pose.cpp
pcl-grabber/src/io/: openni_human_grabber.cpp  openni_nite_device.cpp  openni_nodelet.cpp.diff
pcl-grabber/src/io/openni_camera/: openni_driver_nite.cpp
pcl-grabber/src/pcl_addons/io/: openni_human_grabber.cpp  openni_nodelet.h.diff
pcl-grabber/src/pcl_addons/io/openni_camera/: openni_driver_nite.cpp
pcl-visualizer/: pcl_visualizer.cpp
plane_segmentation/: CMakeLists.txt  plane_segmentation.cpp
plane_segmentation/segmented/: david4_00000.pcd
recordings/: .gitignore  process.py
recordings/david2/: david2_skeleton.yaml
remove_background/: CMakeLists.txt  background_removal.cpp
ros_modules/body_camera/: CMakeLists.txt  manifest.xml  openni_nodelets.xml
ros_modules/body_camera/cfg/: OpenNI.cfg  OpenNI.cfgc  OpenNIUnstable.cfg  OpenNIUnstable.cfgc
ros_modules/body_camera/cfg/cpp/body_camera/: OpenNIConfig.h  OpenNIUnstableConfig.h
ros_modules/body_camera/docs/: OpenNIConfig-usage.dox  OpenNIConfig.dox  OpenNIConfig.wikidoc  OpenNIUnstableConfig-usage.dox  OpenNIUnstableConfig.dox  OpenNIUnstableConfig.wikidoc
ros_modules/body_camera/include/body_camera/: openni_device.h  openni_exception.h
ros_modules/body_camera/launch/: openni_node.launch
ros_modules/body_camera/scripts/: bag_to_skeleton.py
ros_modules/body_camera/src/: openni_depth_image.cpp  openni_device.cpp  openni_device_kinect.cpp  openni_device_oni.cpp  openni_device_primesense.cpp  openni_device_xtion.cpp  openni_driver.cpp  openni_example.cpp  openni_exception.cpp  openni_image_bayer_grbg.cpp  openni_image_rgb24.cpp  openni_image_yuv_422.cpp  openni_ir_image.cpp
ros_modules/body_camera/src/body_camera/cfg/: OpenNIConfig.py
ros_modules/body_camera/src/nodelets/: driver.cpp  driver.h  openni_nodelet.cpp  openni_nodelet.h
ros_modules/body_camera/src/nodes/: openni_node.cpp  openni_node_unstable.cpp
ros_modules/body_camera/src/openni_camera/cfg/: OpenNIUnstableConfig.py
ros_modules/body_scanner/: mainpage.dox  manifest.xml
ros_modules/body_scanner/scripts/: bag_to_skeleton.py
ros_modules/body_tracker/: manifest.xml
ros_modules/body_tracker/src/: openni_tracker.cpp
rviz_configs/: View_Original_Recording.vcg
scan-aligner/: CMakeLists.txt  icp_align.cpp  pcd_read.cpp
segmentation/: CMakeLists.txt  jointYaml.h  segmentation.cpp  segmentation2.cpp  segmentation3.cpp  sharpSegmentation.cpp
segmentation/segmented/: david2_1317518859.851008600.pcd
surface-reconstructor/: CMakeLists.txt  surface-reconstructor.cpp  vtk2obj.py
(+446 files in other folders)
